fix layout issue. fix unsafe url issue

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -773,4 +773,10 @@ input.showError.ng-invalid {
     padding-right: 5px;
   }
 }
+.installToolTip {
+  color:#ffff00;
+  position: absolute;
+  margin-left: 10px;
+  margin-top: 10px;
+}
 
